# nfcli

./: .env.dist  .gitignore  .pre-commit-config.yaml  Makefile  bot.py  privacy.md  pyproject.toml  readme.md  todo.md  usage.md
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
data/: 0_axford.json  0_keystone.json  0_raines.json  0_solomon.json  0_sprinter.json  0_vauxhall.json  2761112649_donnager.json  2761112649_donnager2.json  2761112649_morrigan.json  2761112649_morrigan2.json  2761112649_orion.json  2761112649_pella.json  2761112649_scirocco.json  2761112649_tachi.json  2789730936_aryabhata.json  2789730936_descartes.json  2789730936_euler.json  2789730936_noether.json  2789730936_thales.json  2830208758_halberd.json  2831277422_dogfish.json  2831277422_epaulette.json  2837251946_cadonia.json  2837251946_helendir.json  2837251946_nexaria.json  2838948462_defiant.json  compartments.txt  components.json  en_ui.json  hull_0_axford.json  hull_0_keystone.json  hull_0_raines.json  hull_0_solomon.json  hull_0_sprinter.json  hull_0_vauxhall.json  hull_2761112649_orion.json  hull_2761112649_pella.json  hull_2761112649_tachi.json  hull_2789730936_aryabhata.json  hull_2789730936_descartes.json  (+29 more)
fleets/: .gitignore  Starter - Frigate Fleet.fleet  Starter - TF Ash.fleet  Starter - TF Birch.fleet  Starter - TF Hemlock.fleet  Starter - TF Oak.fleet  Starter - TF Redwood.fleet  Starter - TF Sycamore.fleet  Starter - TF Willow.fleet
nfcli/: __init__.py  __main__.py  bot.py  data.py  database.py  debugger.py  extractor.py  hulls.py  model.py  models.py  parser.py  parsers.py  printer.py  printers.py  sqlite.py  stats.py  steam.py  updater.py  wiki.py  writer.py  writers.py
plugin/: .gitignore  HullDumper.cs  HullDumper.csproj  HullDumper.sln  Makefile  ModInfo.xml  readme.md
plugins/: .gitignore  copy-libs.sh  readme.md
prefab/: aryabhata.prefab  descartes.prefab  euler.prefab  halberd.prefab  noether.prefab  prefabs.json  pythagoras.prefab  tachi.prefab  thales.prefab
tests/: test_nfcli.py
wiki/: 120mm_ap_shell.json  250mm_he-rpf_shell.json  250mm_he_shell.json  450mm_ap_shell.json  450mm_he_shell.json  actively_cooled_amplifiers.json  adaptive_radar_receiver.json  analysis_annex.json  axford.json  battle_dressing_station.json  bulk_magazine.json  citadel_cic.json  cr70_antenna.json  damage_control_central.json  e15_masquerade_signature_booster.json  e55_spotlight_illuminator.json  e57_floodlight_illuminator.json  e70_interruption_jammer.json  e71_hangup_jammer.json  ea12_chaff_decoy.json  flak_round.json  fm200_drive.json  fm200r_drive.json  fm230_whiplash_drive.json  fm280_raider_drive.json  fm30x_prowler_drive.json  fm500_drive.json  fm500r_drive.json  fm530_whiplash_drive.json  gun_plotting_center.json  magazine_sprinklers.json  mk20_defender_pdt.json  mk25_rebound_pdt.json  mk550_mass_driver.json  mk62_cannon.json  mk64_cannon.json  (+16 more)
(+494 files in other folders)
