[tool.black]
line-length = 120
target-version = ['py310']

[tool.ruff]
line-length = 120
select = ["F", "E", "W", "C90", "I", "UP", "C4", "SIM", "ERA", "RUF"]

[tool.poetry]
name = "nfcli"
version = "1.15.2"
description = "A CLI tool to pretty print fleet and ship files to console."
authors = ["Jaghaimo <1764586+jaghaimo@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
xmltodict = "^0.13.0"
rich = "^12.4.4"
python-dotenv = "^0.20.0"
CairoSVG = "^2.5.2"
fuzzywuzzy = "^0.18.0"
python-Levenshtein = "^0.12.2"
steam = "^1.3.0"
py-cord = "^2.0.0"
arrow = "^1.2.2"
inflect = "^6.0.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
debugpy = "^1.6.2"
ruff = "^0.0.270"

[tool.poetry.scripts]
nfcli = "nfcli.__main__:main"
bot = "nfcli.bot:start"
steam = "nfcli.steam:cache_workshop_files"
tags = "nfcli.wiki:update_tags"
wiki = "nfcli.wiki:update_wiki"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
