[tool.ruff]
line-length = 120
lint.select = [
    "F",
    "E",
    "W",
    "C90",
    "I",
    "N",
    "UP",
    "C4",
    "SIM",
    "ERA",
    "PERF",
    "RUF",
]

[tool.poetry]
name = "nfcli"
version = "1.16.0"
description = "A CLI tool to pretty print fleet and ship files to console."
authors = ["Jaghaimo <1764586+jaghaimo@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
CairoSVG = "^2"
arrow = "^1"
fuzzywuzzy = "^0"
inflect = "^6"
py-cord = "^2"
python-dotenv = "^0"
rich = "^12"
steam = "^1"
xmltodict = "^0"

[tool.poetry.dev-dependencies]
debugpy = "^1"
ruff = "^0"

[tool.poetry.scripts]
nfcli = "nfcli.__main__:main"
bot = "nfcli.bot:start"
steam = "nfcli.steam:cache_workshop_files"
tags = "nfcli.wiki:update_tags"
wiki = "nfcli.wiki:update_wiki"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
