[project]
name = "nfcli"
version = "1.19.1"
description = "A CLI tool to pretty print fleet and ship files to console."
requires-python = "==3.10.*"
authors = [{"name" = "Jaghaimo", "email" = "1764586+jaghaimo@users.noreply.github.com"}]
dependencies = [
    "CairoSVG",
    "arrow",
    "fuzzywuzzy",
    "inflect",
    "py-cord",
    "python-dotenv",
    "rich",
    "steam",
    "xmltodict",
]

[dependency-groups]
dev = [
    "debugpy",
    "ruff",
]

[tool.poetry.scripts]
nfcli = "nfcli.__main__:main"
bot = "nfcli.bot:start"
steam = "nfcli.steam:cache_workshop_files"
tags = "nfcli.wiki:update_tags"
wiki = "nfcli.wiki:update_wiki"

[tool.ruff]
line-length = 120
lint.select = [
    "F",
    "E",
    "W",
    "C90",
    "I",
    "N",
    "UP",
    "C4",
    "SIM",
    "ERA",
    "PERF",
    "RUF",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
